--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -120,6 +120,8 @@
           </div>
         </nav>
 
+        <!-- Comment -->
+
         <div class="header__img">
           <picture>
             <source
