compressed images and change format to webp

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
           <div class="hero-box__img">
             <img
-              src="./assets/hero-img.png"
+              src="./assets/hero-img.webp"
               alt="Images of consultants have a session with their clients"
             />
           </div>
@@ -346,7 +346,7 @@
 
           <div class="over-35-years__img">
             <img
-              src="./assets/award-img.png"
+              src="./assets/award-img.webp"
               alt="Photo of CEO giving an award"
             />
           </div>
@@ -899,7 +899,7 @@
           <div class="our-vision__illustration">
             <div class="our-vision__img">
               <img
-                src="./assets/our-vision.png"
+                src="./assets/our-vision.webp"
                 alt="Photo of consultant talking with a client"
               />
             </div>
@@ -939,7 +939,7 @@
 
             <div class="our-vision__img">
               <img
-                src="./assets/our-mission.png"
+                src="./assets/our-mission.webp"
                 alt="Lady sitting and typing"
               />
             </div>
@@ -953,7 +953,10 @@
       <div class="wrapper">
         <div class="ceo-quote">
           <div class="ceo-quote__img">
-            <img src="./adpack-director.png" alt="" />
+            <img
+              src="./assets/adpack-director.webp"
+              alt="Portrait of adpack's principal consultant photo"
+            />
           </div>
 
           <div class="ceo-quote__card">
