--- a/pages/about.html
+++ b/pages/about.html
@@ -168,7 +168,7 @@
           </div>
 
           <div class="hero-box__img">
-            <img src="../assets/about-hero-img.png" alt="" />
+            <img src="../assets/about-hero-img.webp" alt="" />
           </div>
         </div>
       </div>
@@ -376,19 +376,28 @@
 
         <div class="our-team__grid">
           <div class="our-team__card">
-            <img src="../assets/adpack-director.png" alt="" />
+            <img
+              src="../assets/adpack-director.webp"
+              alt="Portrait of Principal Consultant/CEO"
+            />
             <h5>Dr. Oko-Jaja</h5>
             <p>Principal Consultant/CEO</p>
           </div>
 
           <div class="our-team__card">
-            <img src="../assets/prince-kalada.png" alt="" />
+            <img
+              src="../assets/prince-kalada.webp"
+              alt="Portrait of Prince Kalada Oko-Jaja"
+            />
             <h5>Prince Kalada Oko-Jaja</h5>
             <p>Director Research & Development</p>
           </div>
 
           <div class="our-team__card">
-            <img src="../assets/adm-joe-thomas.png" alt="" />
+            <img
+              src="../assets/adm-joe-thomas.webp"
+              alt="Portrait of Adm Joe Thomas"
+            />
             <h5>Adm Joe Thomas</h5>
             <p>Technical Assistant</p>
           </div>
