--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -126,9 +126,9 @@
           <picture>
             <source
               media="(max-width: 768px)"
-              srcset="../assets/portfolio-hero-img-small.png"
+              srcset="../assets/portfolio-hero-img-small.webp"
             />
-            <img src="../assets/portfolio-hero-img.png" alt="hero image" />
+            <img src="../assets/portfolio-hero-img.webp" alt="hero image" />
           </picture>
         </div>
       </div>
@@ -148,7 +148,7 @@
 
         <div class="sec-2-it">
           <div class="it-1">
-            <img src="../assets/Rectangle 68.png" alt="" />
+            <img src="../assets/Rectangle 68.webp" alt="" />
             <div class="it-text">
               <p>
                 We believe building a relationship with our clients enable us
@@ -159,7 +159,7 @@
           </div>
 
           <div class="it-1">
-            <img src="../assets/Rectangle 69.png" alt="" />
+            <img src="../assets/Rectangle 69.webp" alt="" />
             <div class="it-text">
               <p>
                 We believe building a relationship with our clients enable us
@@ -180,7 +180,10 @@
 
         <div class="sec-2-it">
           <div class="it-1">
-            <img src="../assets/past-projects-img-01.png" alt="" />
+            <img
+              src="../assets/past-projects-img-01.webp"
+              alt="Past project pictures"
+            />
             <div class="it-text">
               <h4>Heavy model PET strapping band production line</h4>
 
@@ -192,7 +195,10 @@
           </div>
 
           <div class="it-1">
-            <img src="../assets/past-projects-img-02.png" alt="" />
+            <img
+              src="../assets/past-projects-img-02.webp"
+              alt="Past project pictures"
+            />
             <div class="it-text">
               <h4>
                 Multifunctional biscuit production line for Biscuits, Cookies &
@@ -212,7 +218,10 @@
 
         <div class="sec-2-it">
           <div class="it-1">
-            <img src="../assets/past-projects-img-03.png" alt="" />
+            <img
+              src="../assets/past-projects-img-03.webp"
+              alt="Past project pictures"
+            />
             <div class="it-text">
               <h4>Flour mill machinery for cassava, wheat, and maize</h4>
 
@@ -225,7 +234,10 @@
           </div>
 
           <div class="it-1">
-            <img src="../assets/past-projects-img-04.png" alt="" />
+            <img
+              src="../assets/past-projects-img-04.webp"
+              alt="Past project pictures"
+            />
             <div class="it-text">
               <h4>Niger Paper Industries</h4>
 
@@ -241,7 +253,10 @@
         <!--  -->
         <div class="sec-2-it">
           <div class="it-1">
-            <img src="../assets/past-projects-img-05.png" alt="" />
+            <img
+              src="../assets/past-projects-img-05.webp"
+              alt="Past project pictures"
+            />
             <div class="it-text">
               <h4>Anaegesons Industries Ltd</h4>
 
@@ -254,7 +269,10 @@
           </div>
 
           <div class="it-1">
-            <img src="../assets/past-projects-img-06.png" alt="" />
+            <img
+              src="../assets/past-projects-img-06.webp"
+              alt="Past project pictures"
+            />
             <div class="it-text">
               <h4>Marta Industries Ltd</h4>
 
