--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -93,7 +93,7 @@
                     </svg>
                   </div>
 
-                  <div class="navbar__top-text">info@adpack.com</div>
+                  <div class="navbar__top-text">info@adpackmgt.com</div>
                 </div>
               </div>
 
@@ -415,7 +415,7 @@
                 />
               </svg>
 
-              <p>enquiry@adpackmgtconsults.com</p>
+              <p>enquiry@adpackmgt.com</p>
             </div>
 
             <div class="get-in-touch__it">
@@ -433,7 +433,7 @@
               </svg>
 
               <p class="para">
-                2nd floor, hormat house by Ogbtai Woji, PortHarcourt
+                2nd floor, Hormat House by Ogbatai Woji, PortHarcourt
               </p>
             </div>
 
@@ -516,8 +516,8 @@
 
           <div class="footer__list">
             <a href="#" class="footer__link">Services</a>
-            <a href="#" class="footer__link">About</a>
-            <a href="#" class="footer__link">Contact</a>
+            <a href="../pages/about.html" class="footer__link">About</a>
+            <a href="../pages/contact.html" class="footer__link">Contact</a>
           </div>
 
           <div class="footer__icons">
