--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </svg>
               </div>
 
-              <div class="navbar__top-text">info@adpack.com</div>
+              <div class="navbar__top-text">info@adpackmgt.com</div>
             </div>
           </div>
 
@@ -129,7 +129,7 @@
               </svg>
             </div>
 
-            <a class="btn btn--primary navbar__btn" href="#request">
+            <a class="btn btn--primary navbar__btn" href="./pages/contact.html">
               Request consultant
             </a>
 
@@ -161,12 +161,14 @@
             </h1>
 
             <p class="hero-box__paragraph">
-              SME Consultants Specialised In The Establishment And Management Of
+              SME Consultant Specialised In The Establishment And Management Of
               Industrial development, Project Management, Company
               Re-organization And Restructuring.
             </p>
 
-            <a href="#request" class="btn btn--primary">Request consultant</a>
+            <a href="./pages/contact.html" class="btn btn--primary"
+              >Request consultant</a
+            >
           </div>
 
           <div class="hero-box__img">
@@ -188,8 +190,7 @@
             <p>
               We provide exceptional management and strategic consuting services
               to small and medium sized businesses in a wide range of
-              industries, our team to ensure performance and increased
-              profitability.
+              industries.
             </p>
           </div>
 
@@ -392,7 +393,7 @@
             at a time.
           </p>
 
-          <button class="btn btn--primary">See more</button>
+          <a href="./pages/about.html" class="btn btn--primary">See more</a>
         </div>
       </div>
     </section>
@@ -1054,7 +1055,7 @@
                 />
               </svg>
 
-              <p>enquiry@adpackmgtconsults.com</p>
+              <p>enquiry@adpackmgt.com</p>
             </div>
 
             <div class="get-in-touch__it">
@@ -1072,7 +1073,7 @@
               </svg>
 
               <p class="para">
-                2nd floor, hormat house by Ogbtai Woji, PortHarcourt
+                2nd floor, Hormat House by Ogbatai Woji, PortHarcourt
               </p>
             </div>
 
@@ -1155,8 +1156,8 @@
 
           <div class="footer__list">
             <a href="#" class="footer__link">Services</a>
-            <a href="#" class="footer__link">About</a>
-            <a href="#" class="footer__link">Contact</a>
+            <a href="./pages/about.html" class="footer__link">About</a>
+            <a href="./pages/contact.html" class="footer__link">Contact</a>
           </div>
 
           <div class="footer__icons">
