--- a/pages/about.html
+++ b/pages/about.html
@@ -90,7 +90,7 @@
                 </svg>
               </div>
 
-              <div class="navbar__top-text">info@adpack.com</div>
+              <div class="navbar__top-text">info@adpackmgt.com</div>
             </div>
           </div>
 
@@ -495,7 +495,7 @@
                 />
               </svg>
 
-              <p>enquiry@adpackmgtconsults.com</p>
+              <p>enquiry@adpackmgt.com</p>
             </div>
 
             <div class="get-in-touch__it">
@@ -513,7 +513,7 @@
               </svg>
 
               <p class="para">
-                2nd floor, hormat house by Ogbtai Woji, PortHarcourt
+                2nd floor, Hormat House by Ogbatai Woji, PortHarcourt
               </p>
             </div>
 
