implemented form submission functionality

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -225,8 +225,8 @@
               <p>+234 (0) 803 340 1429</p>
             </div>
           </div>
-          <!--  -->
-          <div class="get-in-touch__form">
+
+          <form class="get-in-touch__form" id="js--form">
             <!--  -->
             <div class="labels">
               <div class="l-1">
@@ -271,8 +271,8 @@
             </div>
             <!--  -->
 
-            <button class="btn btn--primary">Send Message</button>
-          </div>
+            <button type="submit" class="btn btn--primary">Send Message</button>
+          </form>
           <!--  -->
         </div>
       </div>
