--- a/pages/about.html
+++ b/pages/about.html
@@ -535,7 +535,7 @@
             </div>
           </div>
           <!--  -->
-          <div class="get-in-touch__form">
+          <form class="get-in-touch__form" id="js--form">
             <!--  -->
             <div class="labels">
               <div class="l-1">
@@ -580,8 +580,8 @@
             </div>
             <!--  -->
 
-            <button class="btn btn--primary">Send Message</button>
-          </div>
+            <button type="submit" class="btn btn--primary">Send Message</button>
+          </form>
           <!--  -->
         </div>
       </div>
