implemented form submission functionality

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -229,7 +229,7 @@
               <p>+234 (0) 803 340 1429</p>
             </div>
           </div>
-
+          <!--  -->
           <form class="get-in-touch__form" id="js--form">
             <!--  -->
             <div class="labels">
@@ -269,9 +269,15 @@
             </div>
 
             <div class="l-4">
-              <label for="info">Your Message</label>
+              <label for="message">Your Message</label>
               <!-- <input type="text" id="info" /> -->
-              <textarea name="message" id="" cols="30" rows="10"></textarea>
+              <textarea
+                name="message"
+                id="message"
+                cols="30"
+                rows="10"
+                required
+              ></textarea>
             </div>
             <!--  -->
 
