--- a/pages/about.html
+++ b/pages/about.html
@@ -578,9 +578,15 @@
             </div>
 
             <div class="l-4">
-              <label for="info">Your Message</label>
+              <label for="message">Your Message</label>
               <!-- <input type="text" id="info" /> -->
-              <textarea name="message" id="" cols="30" rows="10"></textarea>
+              <textarea
+                name="message"
+                id="message"
+                cols="30"
+                rows="10"
+                required
+              ></textarea>
             </div>
             <!--  -->
 
