--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -505,6 +505,7 @@
                 id="message"
                 cols="30"
                 rows="10"
+                required
               ></textarea>
             </div>
             <!--  -->
