fixed broken images

--- a/pages/about.html
+++ b/pages/about.html
@@ -439,17 +439,17 @@
         </div>
 
         <div class="companies-logos__logos">
-          <img class="logo" src="../image 6.png" alt="" />
-          <img class="logo" src="../Img 04.png" alt="" />
-          <img class="logo" src="../Img 02.png" alt="" />
-          <img class="logo" src="../Img 01.png" alt="" />
-          <img class="logo" src="../Img 00.png" alt="" />
-          <img class="logo" src="../image 7.png" alt="" />
+          <img class="logo" src="../assets/trusted-img01.png" alt="" />
+          <img class="logo" src="../assets/trusted-img02.png" alt="" />
+          <img class="logo" src="../assets/trusted-img03.png" alt="" />
+          <img class="logo" src="../assets/trusted-img04.png" alt="" />
+          <img class="logo" src="../assets/trusted-img05.png" alt="" />
+          <img class="logo" src="../assets/trusted-img06.png" alt="" />
         </div>
       </div>
     </section>
 
-    <section class="get-in-touch--section">
+    <section class="get-in-touch--section" id="request">
       <div class="get-in-touch__top">
         <div class="wrapper">
           <div class="get-in-touch__caption">
