--- a/pages/contact.html
+++ b/pages/contact.html
@@ -140,7 +140,7 @@
       </div>
     </nav>
 
-    <section class="get-in-touch--section">
+    <section class="get-in-touch--section" id="request">
       <div class="get-in-touch__top">
         <div class="wrapper">
           <div class="get-in-touch__caption">
