--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -369,7 +369,7 @@
       </div>
     </section>
 
-    <section class="get-in-touch--section">
+    <section class="get-in-touch--section" id="request">
       <div class="get-in-touch__top">
         <div class="wrapper">
           <div class="get-in-touch__caption">
